2009-04-22  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Added Xsession script to wait until h-d is ready, for NB#109797.

	* debian/hildon-desktop-wait:
	* debian/rules:

2009-04-22  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Remove the HdRenderManager::damage-redraw signal.
	Left some comments for Gordon (or whoever feeling adventurous).

	* src/home/hd-render-manager.c:
	  hd_render_manager_queue_delay_redraw(): queue_redraw() directly
	  hd_render_manager_paint_notify(): removed unnecessary check

2009-04-21  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Patch from Dafydd Harries for
	/tmp/hildon-desktop/desktop-started.stamp

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_map_notify): Create
	desktop-started.stamp file for startup sequence optimisations.
	Fixes: NB#109797

2009-04-21  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes NB#109314
	* src/util/hd-transition.c: Removed commented out code
	* src/home/hd-render-manager.c: Modify position of blur_front to place
	it below app_top, where it should have been previously

2009-04-21  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c: Now treat an actor as non-opaque
	if it is involved in an effect (stops flicker in some transitions)
	* src/util/hd-transition.c: Make popup animation request geometry
	each frame (makes the fill-in fit even if the window is resized)	
	* src/mb/hd-comp-mgr.c: Added popup animation for clients of type
	HdWmClientTypeAppMenu

2009-04-21  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Make the switcher understand _HILDON_NOTIFICATION_THREAD.

	* src/home/hd-task-navigator.c
	* src/mb/hd-note.c
	* src/util/hd-util.h
	* src/util/hd-util.c (hd_util_get_x_window_string_property):
	  Taken from hd-note.c.
	* src/mb/hd-atoms.h
	* src/mb/hd-atoms.c:
	  Atom added.
	* TODO

2009-04-20  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-task-navigator.c:
	  Removed some old-time #if0-d code.  Let's not leave mess behind.